// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reducers should have a correct initial state 1`] = `
Object {
  "lastAction": Object {
    "type": "@@redux/INIT",
  },
  "resources": Object {
    "books": Object {},
  },
  "resourcesActivity": Object {
    "books": Object {
      "creating": Object {},
      "fetching": Object {},
      "fetchingAll": 0,
      "removing": Object {},
      "updating": Object {},
    },
  },
}
`;

exports[`Reducers should have a correct state after FETCH_START 1`] = `
Object {
  "lastAction": Object {
    "type": "BOOKS_FETCH_START",
  },
  "resources": Object {
    "books": Object {},
  },
  "resourcesActivity": Object {
    "books": Object {
      "creating": Object {},
      "fetching": Object {},
      "fetchingAll": 1,
      "removing": Object {},
      "updating": Object {},
    },
  },
}
`;

exports[`Reducers should have a correct state after FETCH_SUCCESS 1`] = `
Object {
  "lastAction": Object {
    "records": Array [
      Object {
        "name": "Name",
        "uuid": 1,
      },
    ],
    "type": "BOOKS_FETCH_SUCCESS",
  },
  "resources": Object {
    "books": Object {
      "1": Object {
        "name": "Name",
        "uuid": 1,
      },
    },
  },
  "resourcesActivity": Object {
    "books": Object {
      "creating": Object {},
      "fetching": Object {},
      "fetchingAll": 0,
      "removing": Object {},
      "updating": Object {},
    },
  },
}
`;
